structure alignment and sidenav fixed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,10 +24,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   height: 100%;
 }
 
-mat-drawer {
+mat-sidenav {
   width: 260px;
 }
-mat-drawer-container {
+mat-sidenav-container {
   height: 100%;
 }
 
